--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "apollo-client": "^2.6.10",
+    "dayjs": "^1.11.13",
     "graphql": "^15.9.0",
     "next": "14.2.13",
     "react": "^18",
