--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "graphql": "^15.9.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
