--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "apollo-client": "^2.6.10",
     "dayjs": "^1.11.13",
     "graphql": "^15.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
